<resources>
    <string name="app_name">LocationMonitorApp</string>
    <string name="name">Name</string>
    <string name="full_name">Full Name</string>
    <string name="dob">DOB</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="setting">Setting</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="new_user">New User?</string>
    <string name="password">Password</string>
    <string name="account">Account</string>
</resources>