<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/white"
    tools:context=".Activities.Authentication.SignupActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#FBFBFB"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="15dp"
                android:onClick="login"
                android:src="@drawable/ic_back"
                app:tint="@color/app_color" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/lexend_extra_bold"
                android:text="Signup"
                android:textSize="30dp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/edit_bg"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/full_name"
                android:padding="12dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/edit_bg"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/edit_bg"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/edit_bg"
                android:fontFamily="@font/poppins_regular"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="15dp"
                android:visibility="gone" />


            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/edit_bg"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="12dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="15dp" />


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/lexend_semi_bold"
                android:onClick="sign_up"
                android:text="Signup"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:layout_margin="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/textColor"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/lexend_semi_bold"
                    android:gravity="center"
                    android:onClick="login"
                    android:text="@string/login"
                    android:textColor="@color/app_color"
                    android:textSize="14dp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>