<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"

    tools:context=".Activities.Authentication.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">


        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            android:src="@drawable/logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lexend_extra_bold"
            android:text="Login"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:textColor="#605D5D"

            android:layout_marginEnd="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="Welcome back, let's get started!"
            android:textSize="13dp" />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/edit_bg"
            android:fontFamily="@font/poppins_regular"
            android:hint="Email"
            android:padding="12dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/edit_bg"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="end"
            android:onClick="forgot_password"
            android:text="Forgot Password?"
            android:textColor="@color/app_color"
            android:textSize="12dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:backgroundTint="#033260"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/lexend_semi_bold"
            android:text="@string/login"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/new_user"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:onClick="sign_up"
                android:layout_marginStart="10dp"
                android:text="@string/sign_up"

                android:textColor="@color/app_color"
                android:textSize="13dp" />

        </LinearLayout>
    </LinearLayout>


</ScrollView>
